--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.7.3
 Pillow==2.6.1
+django-annoying==0.8.0
 django-compressor==1.4
 django-debug-toolbar==1.2.2
-django-annoying==0.8.0
+django-nose==1.3
